# cdm

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.claude  Dockerfile.codex  Justfile  README.md  claude-cleanup.sh  claude-docker.sh  claude-shell.sh  cli-releases.json  codex-docker.sh  codex-shell.sh  docker-compose.claude.yml  docker-compose.codex.yml  docker-entrypoint.sh  install.ps1  install.sh  lsp-releases.json  registry.json  release_notes.md  templates.json  test-semantic-tokens.cdm  test_template_types.cdm  uninstall.ps1  uninstall.sh
crates/cdm/: Cargo.toml  types.ts
crates/cdm-lsp/: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md
crates/cdm-lsp/src/: main.rs  server.rs
crates/cdm-lsp/src/server/: code_actions.rs  completion.rs  diagnostics.rs  document.rs  folding.rs  formatting.rs  navigation.rs  position.rs  rename.rs  semantic_tokens.rs  symbols.rs  workspace.rs
crates/cdm-lsp/src/tests/: main_tests.rs  server_tests.rs
crates/cdm-plugin-docs/: Cargo.toml  Makefile  README.md  TEMPLATE_README.md  cdm-plugin.json  schema.cdm  setup.sh
crates/cdm-plugin-docs/example/: schema.cdm
crates/cdm-plugin-docs/src/: build.rs  generate.rs  lib.rs  validate.rs
crates/cdm-plugin-docs/src/validate/: validate_tests.rs
crates/cdm-plugin-docs/test_fixtures/: minimal_schema.cdm
crates/cdm-plugin-docs/tests/: integration_test.rs
crates/cdm-plugin-json-schema/: .gitignore  Cargo.toml  Makefile  README.md  cdm-plugin.json  schema.cdm  setup.sh
crates/cdm-plugin-json-schema/src/: build.rs  lib.rs  type_mapper.rs  validate.rs
crates/cdm-plugin-json-schema/src/type_mapper/: type_mapper_tests.rs
crates/cdm-plugin-json-schema/src/validate/: validate_tests.rs
crates/cdm-plugin-sql/: Cargo.toml  Makefile  README.md  cdm-plugin.json  schema.cdm  setup.sh
crates/cdm-plugin-sql/src/: build.rs  lib.rs  migrate.rs  type_mapper.rs  utils.rs  validate.rs
crates/cdm-plugin-sql/src/migrate/: migrate_tests.rs
crates/cdm-plugin-sql/src/type_mapper/: type_mapper_tests.rs
crates/cdm-plugin-sql/src/utils/: utils_tests.rs
crates/cdm-plugin-sql/src/validate/: validate_tests.rs
crates/cdm-plugin-sql/test_fixtures/: basic_schema.cdm  product_schema.cdm  product_schema.json  user_schema.json
crates/cdm-plugin-trpc/: Cargo.toml  Makefile  README.md  cdm-plugin.json  schema.cdm
crates/cdm-plugin-trpc/example/: schema.cdm
crates/cdm-plugin-trpc/src/: build.rs  lib.rs  validate.rs
crates/cdm-plugin-trpc/src/validate/: validate_tests.rs
crates/cdm-plugin-typeorm/: Cargo.toml  Makefile  README.md  cdm-plugin.json  schema.cdm  setup.sh
crates/cdm-plugin-typeorm/src/: build.rs  decorator_builder.rs  lib.rs  migrate.rs  type_mapper.rs  validate.rs
crates/cdm-plugin-typeorm/src/decorator_builder/: decorator_builder_tests.rs
crates/cdm-plugin-typeorm/src/migrate/: migrate_tests.rs
crates/cdm-plugin-typeorm/src/type_mapper/: type_mapper_tests.rs
crates/cdm-plugin-typeorm/src/validate/: validate_tests.rs
crates/cdm-plugin-typeorm/tests/: integration_test.rs
crates/cdm-plugin-typescript/: Cargo.toml  Makefile  README.md  cdm-plugin.json  schema.cdm
crates/cdm-plugin-typescript/src/: build.rs  lib.rs  type_mapper.rs  validate.rs  zod_mapper.rs
crates/cdm-plugin-typescript/src/type_mapper/: type_mapper_tests.rs
crates/cdm-plugin-typescript/src/validate/: validate_tests.rs
crates/cdm-plugin-typescript/src/zod_mapper/: zod_mapper_tests.rs
crates/cdm-plugin-typescript/test_fixtures/: basic_schema.cdm  basic_schema.json
crates/cdm/plugin_templates/: README.md
crates/cdm/plugin_templates/rust/: Cargo.toml.template  Makefile.template  README.md.template  cdm-plugin.json.template  schema.cdm.template  setup.sh.template
crates/cdm/src/: build.rs  capabilities.rs  config_utils.rs  dependency_graph.rs  descendant_ids.rs  diagnostics.rs  file_resolver.rs  format.rs  git_plugin.rs  grammar_parser.rs  lib.rs  main.rs  migrate.rs  plugin_cache.rs  plugin_commands.rs  plugin_new.rs  plugin_resolver.rs  plugin_runner.rs  plugin_validation.rs  project_scanner.rs  registry.rs  resolved_schema.rs  self_update.rs  symbol_table.rs  template_commands.rs  template_registry.rs  template_resolver.rs  template_validation.rs  uninstall.rs  update_command.rs  validate.rs  version_resolver.rs
crates/cdm/src/config_utils/: config_utils_tests.rs
crates/cdm/src/dependency_graph/: dependency_graph_tests.rs
crates/cdm/src/descendant_ids/: descendant_ids_tests.rs
crates/cdm/src/diagnostics/: diagnostics_tests.rs
crates/cdm/src/file_resolver/: file_resolver_tests.rs
crates/cdm/src/format/: format_tests.rs
crates/cdm/src/git_plugin/: git_plugin_tests.rs
crates/cdm/src/grammar_parser/: grammar_parser_tests.rs
crates/cdm/src/lsp/: code_actions.rs  completion.rs  diagnostics.rs  document.rs  formatting.rs  lsp_tests.rs  mod.rs  navigation.rs  plugin_schema_cache.rs  position.rs  rename.rs  semantic_tokens.rs  symbols.rs  workspace.rs
crates/cdm/src/migrate/: migrate_tests.rs
crates/cdm/src/plugin_cache/: plugin_cache_tests.rs
crates/cdm/src/plugin_commands/: plugin_commands_tests.rs
crates/cdm/src/plugin_new/: plugin_new_tests.rs
crates/cdm/src/plugin_resolver/: plugin_resolver_tests.rs
crates/cdm/src/plugin_runner/: plugin_runner_tests.rs
crates/cdm/src/plugin_validation/: plugin_validation_tests.rs  tests.rs
crates/cdm/src/project_scanner/: project_scanner_tests.rs
crates/cdm/src/registry/: registry_tests.rs
crates/cdm/src/resolved_schema/: resolved_schema_tests.rs
crates/cdm/src/self_update/: checksum.rs  downloader.rs  error.rs  manifest.rs  platform.rs  replacer.rs
crates/cdm/src/symbol_table/: symbol_table_tests.rs
crates/cdm/src/template_commands/: template_commands_tests.rs
crates/cdm/src/template_registry/: template_registry_tests.rs
crates/cdm/src/template_resolver/: template_resolver_tests.rs
crates/cdm/src/template_validation/: template_validation_tests.rs
crates/cdm/src/test/: client.cdm  (+1 more)
crates/cdm/tests/: build_command_test.rs  cli_tests.rs  plugin_resolver_test.rs  plugin_runner_test.rs  template_tests.rs
(+271 files in other folders)
