[workspace]
resolver = "2"
members = [
    "crates/cdm",
    "crates/grammar",
    "crates/cdm-plugin-interface",
    "crates/cdm-plugin-docs",
    "crates/cdm-plugin-typescript",
    "crates/cdm-plugin-sql",
    "crates/cdm-json-validator",
    "crates/cdm-utils",
]
exclude = [
    "crates/cdm-plugin-example",
    "cdm-plugin-template-test",
]
