[workspace]
resolver = "3"
members = [
    "crates/cdm",
    "crates/grammar",
    "crates/cdm-plugin-interface",
    "crates/cdm-plugin-docs",
    "crates/cdm-plugin-typescript",
    "crates/cdm-plugin-sql",
    "crates/cdm-plugin-ts-rest",
    "crates/cdm-plugin-typeorm",
    "crates/cdm-plugin-json-schema",
    "crates/cdm-json-validator",
    "crates/cdm-utils",
    "tests",
]
exclude = [
    "crates/cdm-plugin-example",
    "cdm-plugin-template-test",
]
