[package]
name = "cdm-lsp"
version = "0.1.0"
edition = "2024"
authors = ["CDM Contributors"]
description = "Language Server Protocol implementation for CDM"
license = "MIT"

[[bin]]
name = "cdm-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cdm = { path = "../cdm" }
tree-sitter = "0.25.10"
grammar = { path = "../grammar" }

[dev-dependencies]
tokio-test = "0.4"
