[package]
name = "cdm-plugin-json-schema"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Local development - uses the cdm-plugin-interface from the workspace
cdm-plugin-interface = { path = "../cdm-plugin-interface" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
