[package]
name = "cdm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
tree-sitter = "0.25.10"
grammar = { path = "../grammar" }
cdm-plugin-api = { path = "../cdm-plugin-api" }
wasmtime = "27.0.0"
wasmtime-wasi = "27.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cc="*"