[package]
name = "cdm"
version = "0.1.5"
edition = "2024"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
tree-sitter = "0.25.10"
grammar = { path = "../grammar" }
cdm-plugin-interface = { path = "../cdm-plugin-interface" }
cdm-utils = { path = "../cdm-utils" }
cdm-json-validator = { path = "../cdm-json-validator" }
wasmtime = "27.0.0"
wasmtime-wasi = "27.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "json"], default-features = false }
sha2 = "0.10"
semver = "1.0"
dirs = "5.0"
indicatif = "0.17"
tempfile = "3.14.0"

[dev-dependencies]
tempfile = "3.14.0"
toml = "0.8.19"
serial_test = "3.2.0"

[build-dependencies]
cc="*"